# echoes-of-Light

./: .clangd  CMakeLists.txt  README.md  main.cpp
include/: Application.h  Game.h  GameSettings.h  MainMenu.h  Menu.h  OptionsMenu.h  State.h  Systems.h
include/components/: AnimationComponent.h  CollisionComponent.h  Component.h  EnemyAIComponent.h  EnemyComponent.h  HitboxComponent.h  LevelManager.h  LightComponent.h  LightEmitterComponent.h  LightSourceComponent.h  Map.h  MeleeAttackComponent.h  MirrorComponent.h  PlayerComponent.h  PuzzleComponent.h  RenderComponent.h  SpawnerComponent.h  TransformComponent.h  UpgradeComponent.h
include/scenes/: GameplayScene.h  MainMenuScene.h  OptionsMenuScene.h  PauseMenuScene.h  Scene.h  SceneStack.h
include/systems/: CollisionSystem.h  DialogSystem.h  SpawnerSystem.h
resources/levels/: future.txt  future_1.txt  future_2.txt  future_3.txt  future_final.txt  past.txt  past_1.txt  past_2.txt  past_3.txt  past_final.txt  present.txt  present_1.txt  present_2.txt  present_3.txt  present_final.txt  tutorial.txt
src/: Application.cpp  Game.cpp  MainMenu.cpp  Menu.cpp  OptionsMenu.cpp  Systems.cpp
src/components/: AnimationComponent.cpp  CollisionComponent.cpp  Component.cpp  EnemyAIComponent.cpp  EnemyComponent.cpp  HitboxComponent.cpp  LevelManager.cpp  LightComponent.cpp  LightEmitterComponent.cpp  LightSourceComponent.cpp  Map.cpp  MeleeAttackComponent.cpp  MirrorComponent.cpp  PlayerComponent.cpp  PuzzleComponent.cpp  RenderComponent.cpp  SpawnerComponent.cpp  TransformComponent.cpp  UpgradeComponent.cpp
src/scenes/: GameplayScene.cpp  MainMenuScene.cpp  OptionsMenuScene.cpp  PauseMenuScene.cpp  SceneStack.cpp
src/systems/: AnimationSystem.cpp  CollisionSystem.cpp  CombatSystem.cpp  DialogSystem.cpp  EnemyAISystem.cpp  InputSystem.cpp  LightSystem.cpp  RenderSystem.cpp  SpawnerSystem.cpp
